--- a/editor/index.html
+++ b/editor/index.html
@@ -76,6 +76,11 @@
                                 </ul>
                             </li>
                             <form class="navbar-form navbar-left">
+                                <button type="button" class="btn btn-link" data-toggle="modal" data-target="#help-modal">
+                                    Help
+                                </button>
+                            </form>
+                            <form class="navbar-form navbar-left">
                                 <button type="button" class="btn btn-primary" id="run-button">Run</button>
                             </form>
                         </ul>
@@ -166,6 +171,23 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="modal fade" id="help-modal">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                        <h4 class="modal-title">Documentation</h4>
+                    </div>
+                    <iframe class="modal-body" style="overflow-y: scroll; height:512px; width: 100%; border: none" src="help.html"></iframe>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                     </div>
                 </div>
             </div>
