better spin toggle

--- a/editor/index.html
+++ b/editor/index.html
@@ -69,9 +69,7 @@
                                         <button type="button" class="btn btn-link" id="center-button">Center</button>
                                     </li>
                                     <li>
-                                        <a>
-                                            <input type="checkbox" checked id="spin-checkbox">Spin
-                                        </a>
+                                        <button type="button" class="btn btn-link" id="spin-button">Toggle spin</button>
                                     </li>
                                 </ul>
                             </li>
