editor: file new

--- a/editor/index.html
+++ b/editor/index.html
@@ -26,6 +26,11 @@
                                 </a>
                                 <ul class="dropdown-menu" role="menu">
                                     <li>
+                                        <button type="button" class="btn btn-link" id="new-button">
+                                            New
+                                        </button>
+                                    </li>
+                                    <li>
                                         <button type="button" class="btn btn-link" id="open-button">
                                             Open
                                         </button>
