forest demo updates

--- a/demos/forest/index.html
+++ b/demos/forest/index.html
@@ -13,5 +13,6 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     <body>
         <canvas id="render-canvas"></canvas>
+        <div id="help"></div>
     </body>
 </html>
