refactoring in progress

--- a/editor/index.html
+++ b/editor/index.html
@@ -2,16 +2,18 @@
 <html>
 
 <head>
+    <script src="sprintf.min.js"></script>
+    <script src="jquery.min.js"></script>
+    <script src="FileSaver.js"></script>
     <script src="three.js"></script>
     <script src="../src/quad-manager.js"></script>
     <script src="../src/voxel-manager.js"></script>
     <script src="../src/geometry-manager.js"></script>
     <script src="../src/brownie.js"></script>
     <script src="trackball.js"></script>
+    <script src="queuebug.js"></script>
+    <script src="view-scene.js"></script>
     <script src="main.js"></script>
-    <script src="sprintf.min.js"></script>
-    <script src="jquery.min.js"></script>
-    <script src="FileSaver.js"></script>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="style.css">
 
