--- a/editor/index.html
+++ b/editor/index.html
@@ -12,7 +12,7 @@
     <script src="../src/brownie.js"></script>
     <script src="trackball.js"></script>
     <script src="queuebug.js"></script>
-    <script src="view-scene.js"></script>
+    <script src="scene.js"></script>
     <script src="main.js"></script>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="style.css">
