mediocre refactor finished

--- a/editor/index.html
+++ b/editor/index.html
@@ -174,7 +174,7 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                        <button type="button" class="btn btn-default" data-dismiss="modal" id="modal-saveas-button">Save</button>
+                        <button type="button" class="btn btn-default" data-dismiss="modal" id="modal-save-button">Save</button>
                     </div>
                 </div>
             </div>
