basic frame support

--- a/editor/index.html
+++ b/editor/index.html
@@ -106,6 +106,12 @@
             <pre id="editor"></pre>
         </div>
         <canvas id="render-canvas"></canvas>
+        <div id="render-controls">
+            <span class="glyphicon glyphicon-step-backward clickable" id="frame-step-left-button"></span>
+            <span class="glyphicon glyphicon-step-forward clickable" id="frame-step-right-button"></span>
+            <span id="frame-number">Frame 0/10</span>
+        </div>
+
 
         <div class="modal fade" id="examples-modal">
             <div class="modal-dialog">
