--- a/editor/index.html
+++ b/editor/index.html
@@ -14,7 +14,7 @@
     <script src="../src/voxel-manager.js"></script>
     <script src="../src/geometry-manager.js"></script>
     <script src="../src/brownie.js"></script>
-    <script src="trackball.js"></script>
+    <script src="pointerlock.js"></script>
     <script src="queuebug.js"></script>
     <script src="scene.js"></script>
     <script src="main.js"></script>
@@ -80,9 +80,6 @@
                                 <ul class="dropdown-menu" role="menu">
                                     <li>
                                         <button type="button" class="btn btn-link" id="center-button">Center</button>
-                                    </li>
-                                    <li>
-                                        <button type="button" class="btn btn-link" id="spin-button">Toggle spin</button>
                                     </li>
                                 </ul>
                             </li>
