use built brownie in demos

--- a/editor/index.html
+++ b/editor/index.html
@@ -10,10 +10,7 @@
 
     <script src="third-party/bootstrap/js/bootstrap.min.js"></script>
 
-    <script src="../src/quad-manager.js"></script>
-    <script src="../src/voxel-manager.js"></script>
-    <script src="../src/geometry-manager.js"></script>
-    <script src="../src/brownie.js"></script>
+    <script src="../build/brownie.js"></script>
     <script src="trackball.js"></script>
     <script src="queuebug.js"></script>
     <script src="scene.js"></script>
