--- a/editor/index.html
+++ b/editor/index.html
@@ -7,13 +7,10 @@
     <script src="third-party/FileSaver.js"></script>
     <script src="third-party/three.js"></script>
     <script src="third-party/ace/ace.js"></script>
-
+    <script src="third-party/keyboard.js"></script>
     <script src="third-party/bootstrap/js/bootstrap.min.js"></script>
 
-    <script src="../src/quad-manager.js"></script>
-    <script src="../src/voxel-manager.js"></script>
-    <script src="../src/geometry-manager.js"></script>
-    <script src="../src/brownie.js"></script>
+    <script src="../build/brownie.js"></script>
     <script src="pointerlock.js"></script>
     <script src="queuebug.js"></script>
     <script src="scene.js"></script>
