finished conversion to minecraft camera

--- a/editor/help.html
+++ b/editor/help.html
@@ -44,14 +44,13 @@
         <h3><code>clear()</code></h3>
         <h4>Clears all voxels.</h4>
 
-        <h3><code>setCamera(angle, elevation, radius, x, y, z)</code></h3>
+        <h3><code>setCamera(x, y, z, yaw, pitch)</code></h3>
         <h4>Sets the postion and orientation of the camera.</h4>
         <p>
             <h5>arguments:</h5>
-            <code>angle</code>: The angle the camera is rotated around the Y-axis. Same as left/right mouse motion while holding the left mouse button.<br>
-            <code>elevation</code>: The angle the camera is elevated away from the XZ-plane. Same as up/down mouse motion while holding the left mouse button.<br>
-            <code>radius</code>: How far from the focus the camera is. Same as mouse wheel.<br>
-            <code>x, y, z</code>: The translation of the focus. Similar to up/down/left/right mouse motion while holding the right mouse button.<br>
+            <code>x, y, z</code>: The position of the camera.<br>
+            <code>yaw</code>: The yaw (left-right) angle of the camera in radians.<br>
+            <code>pitch</code>: The pitch (up-down) angle of the camera in radians.<br>
         </p>
 
     </body>
