--- a/editor/index.html
+++ b/editor/index.html
@@ -78,6 +78,9 @@
                                     <li>
                                         <button type="button" class="btn btn-link" id="center-button">Center</button>
                                     </li>
+                                    <li>
+                                        <button type="button" class="btn btn-link" id="view-get-camera-button">Get camera pose</button>
+                                    </li>
                                 </ul>
                             </li>
                             <form class="navbar-form navbar-left">
@@ -125,6 +128,7 @@
             </div>
         </div>
 
+
         <div class="modal fade" id="export-modal">
             <div class="modal-dialog">
                 <div class="modal-content">
@@ -155,6 +159,7 @@
             </div>
         </div>
 
+
         <div class="modal fade" id="saveas-modal">
             <div class="modal-dialog">
                 <div class="modal-content">
@@ -180,6 +185,7 @@
             </div>
         </div>
 
+
         <div class="modal fade" id="open-modal">
             <div class="modal-dialog">
                 <div class="modal-content">
@@ -198,6 +204,7 @@
             </div>
         </div>
 
+
         <div class="modal fade" id="help-modal">
             <div class="modal-dialog">
                 <div class="modal-content">
@@ -215,7 +222,26 @@
             </div>
         </div>
 
+        <div class="modal fade" id="get-camera-modal">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                        <h4 class="modal-title">Camera pose</h4>
+                    </div>
+                    <div class="modal-body monospace" id="get-camera-modal-body"></div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
         <div id="cover"></div>
+
 
     </body>
 
