--- a/editor/index.html
+++ b/editor/index.html
@@ -12,6 +12,7 @@
 
     <script src="../build/brownie.js"></script>
     <script src="pointerlock.js"></script>
+    <script src="raycast.js"></script>
     <script src="queuebug.js"></script>
     <script src="scene.js"></script>
     <script src="main.js"></script>
