added color picker

--- a/editor/index.html
+++ b/editor/index.html
@@ -108,6 +108,7 @@
             <span class="glyphicon glyphicon-step-backward clickable" id="frame-step-left-button"></span>
             <span class="glyphicon glyphicon-step-forward clickable" id="frame-step-right-button"></span>
             <span id="frame-number">Frame 1/1</span>
+            <input type="color" id="color-picker" class="pull-right"></input>
         </div>
 
 
