--- a/editor/index.html
+++ b/editor/index.html
@@ -106,9 +106,13 @@
         <canvas id="render-canvas"></canvas>
         <div id="render-controls">
             <span class="glyphicon glyphicon-step-backward clickable" id="frame-step-left-button"></span>
+            <span class="glyphicon glyphicon-play clickable" id="frame-play-button"></span>
+            <span class="glyphicon glyphicon-pause clickable" id="frame-pause-button"></span>
             <span class="glyphicon glyphicon-step-forward clickable" id="frame-step-right-button"></span>
+            <span class="glyphicon glyphicon-plus-sign clickable" id="frame-insert-button"></span>
+            <span class="glyphicon glyphicon-remove-sign clickable" id="frame-delete-button"></span>
             <span id="frame-number">Frame 1/1</span>
-            <input type="color" id="color-picker" class="pull-right"></input>
+            <input type="color" id="color-picker" class="pull-right clickable"></input>
         </div>
 
 
