add voxel coordinate indicator

--- a/editor/index.html
+++ b/editor/index.html
@@ -112,6 +112,7 @@
             <span class="glyphicon glyphicon-plus-sign clickable" id="frame-insert-button"></span>
             <span class="glyphicon glyphicon-remove-sign clickable" id="frame-delete-button"></span>
             <span id="frame-number">Frame 1/1</span>
+            <span id="voxel-coordinate">Voxel 0, 0, 0</span>
             <input type="color" id="color-picker" class="pull-right clickable"></input>
         </div>
 
