update forest demo with character

--- a/demos/forest/index.html
+++ b/demos/forest/index.html
@@ -5,10 +5,7 @@
         <script src="jquery.min.js"></script>
         <script src="keyboard.js"></script>
         <script src="underscore.js"></script>
-        <script src="../../src/quad-manager.js"></script>
-        <script src="../../src/voxel-manager.js"></script>
-        <script src="../../src/geometry-manager.js"></script>
-        <script src="../../src/brownie.js"></script>
+        <script src="../../build/brownie.js"></script>
         <script src="main.js"></script>
         <link rel="stylesheet" type="text/css" href="style.css">
     <body>
