--- a/demos/greedy/index.html
+++ b/demos/greedy/index.html
@@ -1,6 +1,7 @@
 
 <html>
     <head>
+        <script src="../../lib/perlin.js"></script>
         <script src="../../lib/three.js"></script>
         <script src="../../build/brownie.js"></script>
         <script src="main.js"></script>
